added a column_mapping argument to use data with different column names

--- a/example.ipynb
+++ b/example.ipynb
@@ -6,14 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from oipd import cli\n",
+    "import oipd.generate_pdf as op\n",
+    "\n",
     "from datetime import datetime\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +29,26 @@
     "current_date_dt = datetime.strptime(current_date, \"%Y-%m-%d\")\n",
     "strike_date_dt = datetime.strptime(strike_date, \"%Y-%m-%d\")\n",
     "# Calculate the difference in days\n",
-    "days_difference = (strike_date_dt - current_date_dt).days\n",
-    "# output_csv_path = \"/Users/henrytian/Downloads/results.csv\"\n"
+    "days_difference = (strike_date_dt - current_date_dt).days"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nvidia_pdf = cli.generate_pdf.run(\n",
-    "    input_csv_path=input_csv_path,\n",
+    "df = pd.read_csv(input_csv_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nvidia_pdf = op.run(\n",
+    "    input_data=input_csv_path,\n",
     "    current_price=float(current_price),\n",
     "    days_forward=int(days_difference),\n",
     "    risk_free_rate=0.03,\n",
@@ -48,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -96,8 +106,7 @@
     "current_date_dt = datetime.strptime(current_date, \"%Y-%m-%d\")\n",
     "strike_date_dt = datetime.strptime(strike_date, \"%Y-%m-%d\")\n",
     "# Calculate the difference in days\n",
-    "days_difference = (strike_date_dt - current_date_dt).days\n",
-    "# output_csv_path = \"/Users/henrytian/Downloads/results.csv\""
+    "days_difference = (strike_date_dt - current_date_dt).days"
    ]
   },
   {
@@ -106,8 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spy_pdf = cli.generate_pdf.run(\n",
-    "    input_csv_path=input_csv_path,\n",
+    "spy_pdf = op.run(\n",
+    "    input_data=input_csv_path,\n",
     "    current_price=float(current_price),\n",
     "    days_forward=int(days_difference),\n",
     "    risk_free_rate=0.03,\n",
@@ -164,9 +173,7 @@
     "current_date_dt = datetime.strptime(current_date, \"%Y-%m-%d\")\n",
     "strike_date_dt = datetime.strptime(strike_date, \"%Y-%m-%d\")\n",
     "# Calculate the difference in days\n",
-    "days_difference = (strike_date_dt - current_date_dt).days\n",
-    "# output_csv_path = \"/Users/henrytian/Downloads/results.csv\"\n",
-    "\n"
+    "days_difference = (strike_date_dt - current_date_dt).days"
    ]
   },
   {
@@ -175,8 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ussteel_pdf = cli.generate_pdf.run(\n",
-    "    input_csv_path=input_csv_path,\n",
+    "ussteel_pdf = op.run(\n",
+    "    input_data=input_csv_path,\n",
     "    current_price=float(current_price),\n",
     "    days_forward=int(days_difference),\n",
     "    risk_free_rate=0.03,\n",
