--- a/example.ipynb
+++ b/example.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import oipd.generate_pdf as op\n",
     "\n",
     "from datetime import datetime\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
