--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
    ],
    "source": [
     "# --- Example 4 - US Steel --- # \n",
-    "# only calls data in this csv\n",
+    "# Note I only saved the data for calls, missing puts\n",
     "\n",
     "# 1) column mapping (CSV headers → OIPD fields)\n",
     "column_mapping_us_steel = {\n",
