--- a/examples/quickstart_VolSurface.ipynb
+++ b/examples/quickstart_VolSurface.ipynb
@@ -711,6 +711,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot a fan chart of price probability over time"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
