updated example notebook

--- a/examples/quickstart_yfinance.ipynb
+++ b/examples/quickstart_yfinance.ipynb
@@ -122,14 +122,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "market = MarketInputs(\n",
-        "    valuation_date=snapshot.date,               # use the snapshot to fill the date and price (this demo is being created on Feb 4, 2026)\n",
+        "    valuation_date=snapshot.date,               # use the snapshot to fill the date and price (this demo is being created on Feb 18, 2026)\n",
         "    underlying_price=snapshot.underlying_price, # use the snapshot to fill the date and price\n",
-        "    risk_free_rate=0.04,                        # the risk-free rate of return. Use the US Fed or Treasury yields that are closest to the horizon of the expiries (e.g. overnight since we're evaluating 2-days ahead)\n",
+        "    risk_free_rate=0.04,                        # the risk-free rate of return. Use the US Fed or Treasury yields that are closest to the horizon of the expiries \n",
         ")"
       ]
     },
@@ -280,13 +280,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "ticker = \"PLTR\" # select a ticker\n",
         "\n",
-        "# we will download all data for the next 3 months\n",
+        "# we will download all data for the next 12 months\n",
         "chain_surface, snapshot_surface = sources.fetch_chain(ticker, horizon='12m')"
       ]
     },
